--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -2,13 +2,19 @@
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-    position: relative;
-    overflow: hidden;
-    max-width: 100%;
-    min-height: 480px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 900px;
+    width: 100%;
+    min-height: 500px;
     font-family: "Montserrat", sans-serif;
-    height: 100vh;
-    margin: -20px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .container-login h1 {
@@ -76,57 +82,40 @@
     width: 100%;
 }
 
-.container-login .form-container {
+.form-container {
     position: absolute;
     top: 0;
     height: 100%;
-    transition: all 0.6s ease-in-out;
+    width: 50%;
+    transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
 }
 
 .sign-in-container {
     left: 0;
-    width: 50%;
     z-index: 2;
+}
+
+.sign-up-container {
+    left: 50%;
+    z-index: 1;
+    opacity: 0;
 }
 
 .container-login.right-panel-active .sign-in-container {
     transform: translateX(100%);
-}
-
-.sign-up-container {
-    left: 0;
-    width: 50%;
-    /* opacity: 0; */
-    /* z-index: 1; */
-    opacity: 1; /* Đảm bảo opacity luôn là 1 */
+    opacity: 0;
     z-index: 1;
-    transition: transform 0.6s ease-in-out; /* Chuyển động mượt mà */
 }
 
 .container-login.right-panel-active .sign-up-container {
-    transform: translateX(100%);
+    transform: translateX(0);
     opacity: 1;
     z-index: 5;
-    /* animation: show 0.6s; */
-}
-
-@keyframes show {
-    0%,
-    49.99% {
-        opacity: 0;
-        z-index: 1;
-    }
-
-    50%,
-    100% {
-        opacity: 1;
-        z-index: 5;
-    }
 }
 
 .overlay-container {
     position: absolute;
-    top: 21px;
+    top: 0;
     left: 50%;
     width: 50%;
     height: 100%;
